# jackdull

./: Cargo.toml  README.md
.semaphore/: semaphore.yml
src/: lib.rs  main.rs
src/app/: actions.rs  mod.rs  state.rs  ui.rs
src/inputs/: events.rs  key.rs
src/io/: file.rs  handler.rs  mod.rs
texts/: 1.json  test.json
