[package]
name = "jackdull"
version = "0.0.1"
authors = ["dodadoa <wasawat.somno@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ilaborie/plop-tui"

[dependencies]
log = "0.4"

tui-logger = "0.7"

tui = "0.17"
crossterm = "0.23"
tokio = { version = "1", features = ["full"] }

eyre = "0.6"

serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
